[gd_scene load_steps=8 format=3 uid="uid://c3306adyeknxy"]

[ext_resource type="Script" path="res://Scenes/Components/Particle/particle.gd" id="1_43hvu"]
[ext_resource type="Texture2D" uid="uid://bjo5qdfls40l1" path="res://images/inducing tools/Revised/Bouquet Petal.PNG" id="2_l8rt2"]
[ext_resource type="Script" path="res://Scenes/Characters/Kel/wind_subscriber.gd" id="3_eyw80"]
[ext_resource type="Script" path="res://Scenes/Components/Tools/tickle_component.gd" id="4_p6mro"]
[ext_resource type="Resource" uid="uid://cg0wlkd00qgpj" path="res://Resources/Allergy/pollen_bouquet.tres" id="5_naktk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o5i2l"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ncgkj"]
radius = 20.025

[node name="BouquetParticle" type="RigidBody2D"]
collision_layer = 256
collision_mask = 256
mass = 0.005
gravity_scale = 0.1
script = ExtResource("1_43hvu")
particle_lifetime = 120.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_o5i2l")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.185, 0.185)
texture = ExtResource("2_l8rt2")

[node name="WindSubscriber" type="Marker2D" parent="."]
script = ExtResource("3_eyw80")

[node name="TickleComponent" type="Area2D" parent="."]
script = ExtResource("4_p6mro")
tickle_type = 2
allergy_type = ExtResource("5_naktk")
intensity = 10.0
tickle_damage_limit = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="TickleComponent"]
shape = SubResource("CircleShape2D_ncgkj")
